Navbar desktop visible on mobile fixed

--- a/main.css
+++ b/main.css
@@ -798,6 +798,9 @@ section {
     display: flex;
     align-items: center;
   }
+  .header__navbar .navbar {
+    display: initial;
+  }
   .header__menu {
     display: none;
   }
